# biores_maia

./: .dockerignore  .gitignore  Clasificador_de_alfabetización_en_salud.ipynb  Dockerfile  README.md  archi.md  architecture.md  docker-compose.yml  frontend_plan.md  main.py  metrics.csv  pyproject.toml  requirements.txt
.dvc/: config  config.bak
Jupyter/: Clasificador.ipynb  Qwen2_5_3B.ipynb
backend/: .env.example  Dockerfile  requirements.txt
config/: config.yaml
data/: .gitignore  ClinicalTrials.gov.dvc  Cochrane.dvc  Pfizer.dvc  Trial Summaries.dvc  augmented_test_metrics.parquet  cleaned.dvc  healthlit_data_sources.dvc  main_test_metrics.parquet
datos/: main_test.parquet
docs/: api_contracts.md  architecture.md  configuration.md  onboarding_data_pipeline.md
frontend/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
inference/: examples.txt  requirements_inference.txt  run_examples.sh  test_inference.py
jupyter/: CodeLlama_7B_Finetuning.ipynb  Qwen3_8B_Finetuning.ipynb  project.ipynb
metrics/: metrics_all_chunks.parquet  metrics_all_chunks.parquet.dvc  metrics_final.csv
notebooks/: Qwen2_5_3B.ipynb
poc/: insert_txt_to_mongo.py  insert_txt_to_mongo_processing.py  model_translate.ipynb.ipynb  update_translations.py
results/: metrics_sample_es.csv  significant_differences.csv  stats_summary.csv
scripts/: clean_en.py  compute_metrics.py  compute_metrics_es.py  compute_metrics_es.py.bak  export_sample_metrics.py  import_corpus_documents.py  import_dataset_state.py  import_evaluation_overview.py  (+8 more)
(+100 files in other folders)
