[build-system]
requires = ["setuptools>=70", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "biores-maia-cleaning"
version = "0.0.1"
description = "Cleaning pipeline for medical texts (EN) - S3 + DVC"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
    "pandas>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "unidecode>=1.3.6",
    "ftfy>=6.1.1",
    "fsspec>=2023.11.0",
    "smart-open>=6.3.0",
    "spacy>=3.5.0",
    "tqdm>=4.65.0",
    "regex>=2023.8.8",
    "pyarrow>=11.0.0",
    "joblib>=1.5.2",
    "tqdm-joblib>=0.0.5",
    "matplotlib>=3.10.7",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "lxml>=6.0.2",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "altair>=5.3.0",
    "scikit-learn>=1.5.0",
    "watchdog>=6.0.0",
    "textstat>=0.7.11",
    "filelock>=3.20.0",
    "peft>=0.18.0",
    "stable-baselines3==2.3.0",
    "gymnasium==0.29.1",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["data*", "config*", "mockups*", "scripts*"]
